# KrutC

./: .clang-format  KPL-syntax.xlsx  README.md  ~$KPL-syntax.xlsx
krutc/: CMakeLists.txt
krutc/frontend/: codegen.cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  scopetable.cpp  token.cpp  tree.cpp  typechecker.cpp
krutc/frontend/error-cases/: attribute.krut
krutc/frontend/examples/: bro.krut  dispatch.krut  example.krut  for.krut  if.krut  int.krut  list.krut  method.krut  set.krut  while.krut
krutc/frontend/include/: codegen.h  constants.h  error.h  filestreambuffer.h  inheritance-graph.h  lexer.h  parser.h  scopetable.h  token.h  tokenbuffer.h  tree.h  typechecker.h
krutc/include/: filestreambuffer.h  token.h  tokenbuffer.h  tree.cpp  tree.h
krutc/src/: main.cpp
krutc/src/backend/: codegen.cpp
krutc/src/frontend/: codegen.cpp  lexer.cpp  parser.cpp  scopetable.cpp  tree.cpp  typechecker.cpp
krutc/src/frontend/error-cases/: formal.krut  method.krut
krutc/src/frontend/examples/: class.krut  dispatch.krut  example.krut  if.krut  new.krut
krutc/src/frontend/include/: error.h  inheritance-graph.h  lexer.h  parser.h  scopetable.h  tokenbuffer.h  tree.h
